# CarryPigeon-Server

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  Rocket.toml  docker-compose.yaml  maven-settings.xml  pom.xml  readme.md
ApplicationStarter/: pom.xml
ChatDAO/: pom.xml
ChatDao/: pom.xml
ChatDomain/: pom.xml
ChatService/: pom.xml
Common/: pom.xml
ConnectionPool/: pom.xml
DAO/: pom.xml
ai-agent-workplace/: 20260420-132451-ai-infrastructure-service-framework-done.md  20260420-134413-ai-chat-domain-http-netty-done.md  20260420-164627-ai-carrypigeon-prd-done.md  20260420-170413-ai-chat-core-model-prd-done.md  20260420-170413-ai-client-multi-server-prd-done.md  20260420-170413-ai-mvp-scope-prd-done.md  20260420-170413-ai-plugin-system-prd-done.md  20260420-192151-ai-server-design-done.md  20260420-192151-ai-server-detail-design-done.md  20260420-192959-ai-prd-consolidation-done.md  20260420-195231-ai-task-sheet-cleanup-done.md  20260420-204745-ai-auth-mvp-foundation-done.md  20260421-084300-ai-config-hardening-followup-done.md  20260421-111200-ai-fail-fast-config-validation-done.md  20260421-112500-ai-final-remediation-summary-done.md  20260421-112530-ai-final-remediation-summary-done.md  20260421-114500-ai-audit-compliance-fix-done.md  20260421-212357-ai-workflow-governance-done.md  20260421-215721-ai-starter-decoupling-and-infra-doc-current.md  20260422-101439-ai-group-chat-v0-done.md  20260422-184500-ai-message-plugin-abstraction-done.md  20260422-193000-ai-message-preview-search-skeleton-done.md  20260422-201600-ai-file-voice-message-implementation-done.md  20260422-231500-ai-database-impl-mybatis-plus-done.md  20260423-094856-ai-file-voice-message-usability-done.md  20260423-125908-ai-attachment-optimization-pass-done.md  (+142 more)
api/: pom.xml
common/: pom.xml
(+2179 files in other folders)
